-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 19, repo-loom
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284247 | 18.0.2 | Tobias Hartmann | P4 | Resolved | Fixed | b02 |
| JDK-8283995 | 17.0.4-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b02 |
| JDK-8284099 | 17.0.4 | Martin Doerr | P4 | Resolved | Fixed | b01 |
runtime/cds/appcds/dynamicArchive/methodHandles/MethodHandlesAsCollectorTest.java
runtime/cds/appcds/methodHandles/MethodHandlesAsCollectorTest.java
- backported by
-
JDK-8283995 appcds/*/MethodHandlesAsCollectorTest.java tests time out because of excessive GC (CodeCache GC Threshold) in loom
-
- Resolved
-
-
JDK-8284099 appcds/*/MethodHandlesAsCollectorTest.java tests time out because of excessive GC (CodeCache GC Threshold) in loom
-
- Resolved
-
-
JDK-8284247 appcds/*/MethodHandlesAsCollectorTest.java tests time out because of excessive GC (CodeCache GC Threshold) in loom
-
- Resolved
-
- duplicates
-
JDK-8256327 Revisit aggressive code cache sweeping behaviour
-
- Closed
-
- relates to
-
JDK-8015774 Add support for multiple code heaps
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/a1a29925
-
Commit
openjdk/jdk18u/074b635b
-
Commit
openjdk/jdk/022d8070
-
Review
openjdk/jdk17u-dev/319
-
Review
openjdk/jdk18u/81
-
Review
openjdk/jdk/7514