8271008: appcds/*/MethodHandlesAsCollectorTest.java  tests time out because of excessive GC (CodeCache GC Threshold) in loom

Backport-of: 022d80707c346f4b82ac1eb53e77c634769631e9